Edited README via GitHub

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Project 0 is a simple raytracer written in C.
-The project has a learning purpose and was created by Tumaykin Danil, Begnozzi Marco, Cauzzi Marco, Alessandro Carlin and Verona Alessandro.
+The project has a learning purpose and was created by Tumaykin Danil, Begnozzi Marco, Alessandro Carlin, Cauzzi Marco and Verona Alessandro.
